fix overflowing cards

--- a/src/card/card.module.css
+++ b/src/card/card.module.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 2px 8px rgba(0, 0, 0, 0.1);
   flex: 1;
-  min-width: 30%;
+  min-width: 28%;
   max-width: 50%;
   border-radius: 8px;
   overflow: hidden;
